Added function to Google Classroom Disguise
still need a lot of work with the google classroom disguise but this is a foundation

--- a/404.html
+++ b/404.html
@@ -21,6 +21,7 @@
             <a href="https://www.youtube.com/watch?v=G3AfIvJBcGo">NO</a>
          </div>
       </section>
+      <script src="/js/disguise.js"></script>
       <script type="text/javascript" src="/js/seasonal.js"></script>
    </body>
    <!--tsParticles-->
