--- a/pages/player.html
+++ b/pages/player.html
@@ -10,75 +10,6 @@
    <link rel='icon' href="/img/favicon-32x32.png">
    <script src="/js/disguise.js"></script>
    <style>
-      * {
-         margin: 0;
-         padding: 0;
-         box-sizing: border-box;
-      }
-
-      html, body {
-         height: 100%;
-         overflow: hidden;
-         font-family: sans-serif;
-         background: black;
-      }
-
-      .wrapper {
-         display: flex;
-         height: 100vh;
-         width: 100vw;
-      }
-
-      .sidebar {
-         width: 200px;
-         background: rgba(24, 24, 24, 0.9);
-         color: white;
-         display: flex;
-         flex-direction: column;
-         justify-content: space-between;
-      }
-
-      .sidebar h2 {
-         text-align: center;
-         padding: 20px 10px;
-         font-size: 20px;
-         border-bottom: 1px solid #444;
-      }
-
-      .sidebar ul {
-         list-style: none;
-         padding: 0;
-         margin: 0;
-      }
-
-      .sidebar ul a {
-         text-decoration: none;
-         color: white;
-      }
-
-      .sidebar ul li {
-         padding: 12px 20px;
-         border-bottom: 1px solid #333;
-         cursor: pointer;
-      }
-
-      .sidebar ul li:hover {
-         background-color: #333;
-      }
-
-      .left-col {
-         padding: 10px;
-         text-align: center;
-      }
-
-      .main_content {
-         flex: 1;
-         display: flex;
-         flex-direction: column;
-         height: 100%;
-         background: black;
-      }
-
       iframe {
          flex: 1;
          width: 100%;
@@ -96,7 +27,7 @@
                <a href="/index.html"><li><i class="fa-solid fa-house"></i> Home</li></a>
                <a href="https://github.com/dngaa/dngaa.github.io/issues/new?labels=bug&title=Bug%20Report"><li><i class="fa-solid fa-bug"></i> Bug Report</li></a>
                <a href="https://github.com/dngaa/dngaa.github.io/issues/new?labels=game%20request&title=Game%20Request"><li><i class="fa-solid fa-ghost"></i> Game Request</li></a>
-               <a href="pages/settings.html"><li><i class="fa-solid fa-gear"></i> Settings</li></a>
+               <a href="/pages/settings.html"><li><i class="fa-solid fa-gear"></i> Settings</li></a>
                <a><li id="go-to-top-button"><i class="fa-solid fa-up-long"></i> Top</li></a>
             </ul>
          </div>
