--- a/pages/player.html
+++ b/pages/player.html
@@ -13,6 +13,7 @@
       iframe {
          flex: 1;
          width: 100%;
+         height: 100%;
          border: none;
          display: block;
       }
