--- a/pages/player.html
+++ b/pages/player.html
@@ -25,7 +25,7 @@
          <div>
             <h2>Jet Yeh's</h2>
          <ul>
-            <a href="index.html">
+            <a href="/index.html">
                <li class="selectedButton"><i class="fa-solid fa-house"></i> Home</li>
             </a>
             <a
@@ -36,7 +36,7 @@
                href="https://github.com/dngaa/dngaa.github.io/issues/new?labels=game%20request&title=Game%20Request&body=-%20**Game%20Title**%3A%20The%20name%20of%20the%20game%20you%20would%20like%20to%20request.%0A-%20**Description**%3A%20Why%20do%20you%20want%20this%20game%3F%20What%20features%20or%20gameplay%20elements%20are%20important%3F%0A-%20**Source%20Code**%3A%20If%20available%2C%20please%20provide%20a%20link%20to%20the%20original%20game%20source%20code.%0A-%20**Additional%20Notes**%3A%20Any%20extra%20details%20or%20context%20about%20the%20request.">
                <li><i class="fa-solid fa-ghost"></i> Game Request</li>
             </a>
-            <a href="pages/settings.html">
+            <a href="/pages/settings.html">
                <li><i class="fa-solid fa-gear"></i> Settings</li>
             </a>
             <a>
