--- a/pages/player.html
+++ b/pages/player.html
@@ -11,7 +11,6 @@
    <link rel='icon' href="/img/favicon-32x32.png">
    <script src="/js/disguise.js"></script>
    <style>
-      
       html,
       body {
          height: 100%;
@@ -25,11 +24,15 @@
          height: 100%;
       }
 
+      .sidebar {
+         height: 100%;
+         overflow-y: auto;
+      }
+
       .iframe-container {
          flex-grow: 1;
          width: 100%;
-         height: calc(100vh - 200px);
-         /* Adjust 200px to match your header/sidebar height */
+         height: 100%;
          display: flex;
       }
 
