--- a/pages/player.html
+++ b/pages/player.html
@@ -25,13 +25,15 @@
       }
 
       .sidebar {
+         width: 200px;
          height: 100%;
+         background-color: #1e1e1e;
          overflow-y: auto;
+         flex-shrink: 0;
       }
 
       .iframe-container {
          flex-grow: 1;
-         width: 100%;
          height: 100%;
          display: flex;
       }
