--- a/pages/player.html
+++ b/pages/player.html
@@ -28,17 +28,18 @@
       .sidebar {
          width: 200px;
          height: 100%;
-         overflow-y: auto;
-         background-color: #1e1e1e;
+         background: rgba(24, 24, 24, 0.8);
+         backdrop-filter: blur(2.5px);
+         position: fixed;
+         padding: 30px 0px;
          z-index: 1;
-         flex-shrink: 0;
+         overflow-y: auto;
       }
 
-      .bodyMain {
-         flex-grow: 1;
+      .main_content {
+         margin-left: 200px;
          height: 100%;
-         z-index: 0;
-         display: flex;
+         width: calc(100% - 200px);
       }
 
       #game-frame {
@@ -76,7 +77,7 @@
          </div>
       </div>
 
-      <div class="bodyMain">
+      <div class="main_content">
          <iframe id="game-frame" src="" allowfullscreen></iframe>
       </div>
    </div>
