--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
                <li id="go-to-top-button"><i class="fa-solid fa-up-long"></i> Top</li>
             </a>
          </ul>
+         <div class="social_media">
+            <center>
+               <img src="https://visit-counter.vercel.app/counter.png?page=&s=40&c=00ff00&bg=00000000&no=2&ff=digi&tb=&ta=" alt="visits">
+            </center>
+         </div>
          <div class="left-col">
             <img title="icon" src="img/icon.png" width="199px">
          </div>
