New view counter test

--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
                <li id="go-to-top-button"><i class="fa-solid fa-up-long"></i> Top</li>
             </a>
          </ul>
-         <div class="social_media">
+         <!--Stole this from old ver of site-->
+         <div>
             <center>
-               <img src="https://visit-counter.vercel.app/counter.png?page=&s=40&c=00ff00&bg=00000000&no=2&ff=digi&tb=&ta=" alt="visits">
+               <img src="https://visit-counter.vercel.app/counter.png?page=&s=25&c=ffffff&bg=00000000&no=5&ff=electrolize&tb=&ta=" alt="visits">
             </center>
          </div>
          <div class="left-col">
