--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
          <!--Stole this from old ver of site-->
          <div>
             <center>
-               <img src="https://visit-counter.vercel.app/counter.png?page=&s=25&c=ffffff&bg=00000000&no=5&ff=electrolize&tb=&ta=" alt="visits">
+               <img src="https://visit-counter.vercel.app/counter.png?page=https%3A%2F%2Fdngaa.github.io&s=25&c=ffffff&bg=00000000&no=6&ff=electrolize&tb=&ta=" alt="visits">
             </center>
          </div>
          <div class="left-col">
