--- a/404.html
+++ b/404.html
@@ -3,6 +3,7 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="robots" content="noindex">
       <title>Jet Yeh's | 404</title>
       <link rel='icon' href="/img/favicon-32x32.png">
       <link rel="stylesheet" href="/css/404.css">
@@ -17,7 +18,7 @@
             <h1>404</h1>
             <h2>PAGE NOT FOUND</h2>
             <h3>BACK TO HOME?</h3>
-            <a onclick href="/" class="yes">YES</a>
+            <a href="/" class="yes">YES</a>
             <a href="https://www.youtube.com/watch?v=G3AfIvJBcGo">NO</a>
          </div>
       </section>
