--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
          </div>
          <div>
             <center>
-               <img src="https://visit-counter.vercel.app/counter.png?page=&s=25&c=ffffff&bg=00000000&no=5&ff=electrolize&tb=&ta=" alt="visits">
+               <img src="https://visit-counter.vercel.app/counter.png?page=dngaa.github.io&s=40&c=ffffff&bg=00000000&no=2&ff=electrolize&tb=&ta=" alt="visits">
             </center>
          </div>
       </div>
