--- a/pages/settings.html
+++ b/pages/settings.html
@@ -40,7 +40,7 @@
          </div>
          <div>
             <center>
-               <img src="https://visit-counter.vercel.app/counter.png?page=https%3A%2F%2Fdngaa.github.io&s=25&c=ffffff&bg=00000000&no=6&ff=electrolize&tb=&ta=" alt="visits">
+               <img src="https://visit-counter.vercel.app/counter.png?page=dngaa.github.io&s=25&c=ffffff&bg=00000000&no=6&ff=digi&tb=&ta=" alt="visits">
             </center>
          </div>
       </div>
