--- a/pages/settings.html
+++ b/pages/settings.html
@@ -61,7 +61,7 @@
                <div class="settings-content">
                   <input id="gc-disguise-toggle" type="checkbox">
                   <label for="gc-disguise-toggle">
-                     Google Classroom Disguise (Early Beta)
+                     Google Classroom Disguise
                   </label>
                </div>
             </div>
