--- a/pages/player.html
+++ b/pages/player.html
@@ -8,6 +8,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
    <link rel="stylesheet" href="/css/style.css">
    <link rel="stylesheet" href="/css/index.css">
+   <link rel="stylesheet" href="css/seasonal.css">
    <link rel="icon" href="/img/favicon-32x32.png">
    <script src="/js/disguise.js"></script>
    <style>
@@ -74,12 +75,11 @@
             <img title="icon" src="/img/icon.png" width="199px">
          </div>
       </div>
-
       <div class="main_content">
          <iframe id="game-frame" src="" allowfullscreen></iframe>
       </div>
    </div>
-
+   <script type="text/javascript" src="../js/seasonal.js"></script>
    <script>
       const params = new URLSearchParams(window.location.search);
       const gameUrl = params.get("src");
