--- a/pages/player.html
+++ b/pages/player.html
@@ -77,8 +77,8 @@
       <div class="main_content">
          <iframe id="game-frame" src="" allowfullscreen></iframe>
       </div>
+      <div style="height: 2000px;"></div>
    </div>
-   <script type="text/javascript" src="../js/seasonal.js"></script>
    <script>
       const params = new URLSearchParams(window.location.search);
       const gameUrl = params.get("src");
