--- a/pages/player.html
+++ b/pages/player.html
@@ -75,7 +75,7 @@
          </div>
       </div>
       <div class="main_content">
-         <iframe id="game-frame" src="" allowfullscreen></iframe>
+         <iframe style="background-color: white;" id="game-frame" src="" allowfullscreen></iframe>
       </div>
       <div style="height: 2000px;"></div>
    </div>
