--- a/pages/settings.html
+++ b/pages/settings.html
@@ -6,7 +6,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
    <link rel="stylesheet" href="../css/index.css">
    <link rel="stylesheet" href="../css/style.css">
-   <link rel="stylesheet" href="../css/blogDexStyle.css">
+   <link rel="stylesheet" href="../css/gameGrid.css">
    <link rel="stylesheet" href="../css/seasonal.css">
    <link rel='icon' href="../img/favicon-32x32.png">
 </head>
