--- a/index.html
+++ b/index.html
@@ -2,21 +2,20 @@
 <html lang="en">
 
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <title>Jet Yeh's</title>
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-   <link rel="stylesheet" href="css/style.css">
-   <link rel="stylesheet" href="css/index.css">
-   <link rel="stylesheet" href="css/gameGrid.css">
-   <link rel="stylesheet" href="css/seasonal.css">
-   <link rel='icon' href="img/favicon-32x32.png">
-   <meta name="description"
-      content="Play free unblocked games anytime and anywhere! Enjoy a wide selection of fun, exciting, and safe games for school or work">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Jet Yeh's</title>
+  <meta name="description" content="Play free unblocked games anytime and anywhere! Enjoy a wide selection of fun, exciting, and safe games for school or work">
+  <link rel="icon" href="img/favicon-32x32.png" />
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/index.css" />
+  <link rel="stylesheet" href="css/gameGrid.css" />
+  <link rel="stylesheet" href="css/seasonal.css" />
 </head>
 
 <body>
    <div id="loading-bar"></div>
+   
    <div class="wrapper">
       <div class="sidebar">
          <h2>Jet Yeh's</h2>
@@ -69,6 +68,7 @@
             </header>
             <br>
          </div>
+         
          <ul id="navbar">
             <div class="search-bar" style="margin-top: -25px">
                <input type="text" name="search" value="" autocomplete="off" id="myinput" onkeyup="searchFunction()"
@@ -86,21 +86,22 @@
             <li class="nav"><button name="multi" onclick="switchGame('multi');"
                   class="selectButton selectable">Multiplayer</button></li>
          </ul>
+
          <div class="bodyMain">
-            <div>
-               <div class="main">
-                  <div class="row" id="game-container"></div>
-                  <script src="js/games.js"></script>
-                  <script src="js/renderGames.js"></script>
-               </div>
+            <div class="main">
+               <div class="row" id="game-container"></div>
+               <script src="js/games.js"></script>
+               <script src="js/renderGames.js"></script>
             </div>
             <div id="progress">
                <span id="progress-value"></span>
             </div>
          </div>
+
          <script src="js/disguise.js"></script>
          <script type="text/javascript" src="js/main.js"></script>
          <script type="text/javascript" src="js/seasonal.js"></script>
+
 </body>
 <div id="tsparticles"></div>
 <script src="https://cdn.jsdelivr.net/npm/tsparticles@3.8.1/tsparticles.bundle.min.js"></script>
