--- a/pages/settings.html
+++ b/pages/settings.html
@@ -3,8 +3,7 @@
 
 <head>
    <title>Settings | Jet Yeh's</title>
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-   <link rel="stylesheet" href="../css/index.css">
+   <link rel="stylesheet" href="../css/settings.css">
    <link rel="stylesheet" href="../css/style.css">
    <link rel="stylesheet" href="../css/gameGrid.css">
    <link rel="stylesheet" href="../css/seasonal.css">
@@ -17,27 +16,17 @@
       <div class="sidebar">
          <h2>Jet Yeh's</h2>
          <ul>
-            <a href="../index.html">
-               <li><i class="fa-solid fa-house"></i> Home</li>
-            </a>
-            <a
-               href="https://github.com/dngaa/dngaa.github.io/issues/new?labels=bug&title=Bug%20Report&body=-%20**Describe%20the%20bug**%20A%20clear%20and%20concise%20description%20of%20what%20the%20bug%20is.%0A-%20**To%20Reproduce**%20Steps%20to%20reproduce%20the%20behavior%3A%0A%20%20%201.%20Go%20to%20...%0A%20%20%202.%20Click%20on%20...%0A%20%20%203.%20Scroll%20down%20to%20...%0A%20%20%204.%20See%20error%0A-%20**Expected%20behavior**%20A%20clear%20and%20concise%20description%20of%20what%20you%20expected%20to%20happen.%0A-%20**Screenshots**%20If%20applicable%2C%20add%20screenshots%20to%20help%20explain%20your%20problem.%0A-%20**Environment**%20(please%20complete%20the%20following%20information)%3A%0A%20%20%20-%20OS%3A%20%0A%20%20%20-%20Browser%3A%20%0A%20%20%20-%20Version%3A%20%0A-%20**Additional%20context**%20Add%20any%20other%20context%20about%20the%20problem%20here.">
-               <li><i class="fa-solid fa-bug"></i> Bug Report</li>
-            </a>
-            <a
-               href="https://github.com/dngaa/dngaa.github.io/issues/new?labels=game%20request&title=Game%20Request&body=-%20**Game%20Title**%3A%20The%20name%20of%20the%20game%20you%20would%20like%20to%20request.%0A-%20**Description**%3A%20Why%20do%20you%20want%20this%20game%3F%20What%20features%20or%20gameplay%20elements%20are%20important%3F%0A-%20**Source%20Code**%3A%20If%20available%2C%20please%20provide%20a%20link%20to%20the%20original%20game%20source%20code.%0A-%20**Additional%20Notes**%3A%20Any%20extra%20details%20or%20context%20about%20the%20request.">
-               <li><i class="fa-solid fa-ghost"></i> Game Request</li>
-            </a>
-            <a href=" ">
-               <li class="selectedButton"><i class="fa-solid fa-gear"></i> Settings</li>
-            </a>
-            <a>
-               <li id="go-to-top-button"><i class="fa-solid fa-up-long"></i> Top</li>
-            </a>
+            <li onclick="location.href='../index.html'"><i class="fa-solid fa-house"></i> Home</li>
+            <li onclick="location.href='//github.com/dngaa/dngaa.github.io/issues/new?labels=bug&title=Bug%20Report&body=-%20**Describe%20the%20bug**%20A%20clear%20and%20concise%20description%20of%20what%20the%20bug%20is.%0A-%20**To%20Reproduce**%20Steps%20to%20reproduce%20the%20behavior%3A%0A%20%20%201.%20Go%20to%20...%0A%20%20%202.%20Click%20on%20...%0A%20%20%203.%20Scroll%20down%20to%20...%0A%20%20%204.%20See%20error%0A-%20**Expected%20behavior**%20A%20clear%20and%20concise%20description%20of%20what%20you%20expected%20to%20happen.%0A-%20**Screenshots**%20If%20applicable%2C%20add%20screenshots%20to%20help%20explain%20your%20problem.%0A-%20**Environment**%20(please%20complete%20the%20following%20information)%3A%0A%20%20%20-%20OS%3A%20%0A%20%20%20-%20Browser%3A%20%0A%20%20%20-%20Version%3A%20%0A-%20**Additional%20context**%20Add%20any%20other%20context%20about%20the%20problem%20here.'"><i class="fa-solid fa-bug"></i> Bug Report</li>
+            <li onclick="location.href='//github.com/dngaa/dngaa.github.io/issues/new?labels=game%20request&title=Game%20Request&body=-%20**Game%20Title**%3A%20The%20name%20of%20the%20game%20you%20would%20like%20to%20request.%0A-%20**Description**%3A%20Why%20do%20you%20want%20this%20game%3F%20What%20features%20or%20gameplay%20elements%20are%20important%3F%0A-%20**Source%20Code**%3A%20If%20available%2C%20please%20provide%20a%20link%20to%20the%20original%20game%20source%20code.%0A-%20**Additional%20Notes**%3A%20Any%20extra%20details%20or%20context%20about%20the%20request.'"><i class="fa-solid fa-ghost"></i> Game Request</li>
+            <li onclick="location.href='settings.html'" class="selectedButton"><i class="fa-solid fa-gear"></i> Settings</li>
+            <li id="go-to-top-button"><i class="fa-solid fa-up-long"></i> Top</li>
          </ul>
+
          <div class="left-col">
             <img title="icon" src="../img/icon.png" width="199px">
          </div>
+         
          <div>
             <center>
                <img src="https://visit-counter.vercel.app/counter.png?page=dngaa.github.io&s=25&c=ffffff&bg=00000000&no=6&ff=digi&tb=&ta=" alt="visits">
