--- a/404.html
+++ b/404.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="robots" content="noindex">
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <meta name="robots" content="noindex" />
       <title>Jet Yeh's | 404</title>
-      <link rel='icon' href="/img/favicon-32x32.png">
-      <link rel="stylesheet" href="/css/404.css">
-      <link rel="stylesheet" href="/css/style.css">
+      <link rel="icon" href="/img/favicon-32x32.png" />
+      <link rel="stylesheet" href="/css/404.css" />
+      <link rel="stylesheet" href="/css/style.css" />
    </head>
    <body>
       <section class="notFound">
          <div class="img">
-            <img style="width:600px;" src="/img/404.png" alt="icon" />
+            <img style="width: 600px" src="/img/404.png" alt="icon" />
          </div>
          <div class="text">
             <h1>404</h1>
